fix guest dialog not being visible

--- a/css/app.less
+++ b/css/app.less
@@ -6,12 +6,12 @@
   @modal-height: 360px;
   @modal-gutter: 15px;
 
-  @moda-z-index: 500;
+  @modal-z-index: 1000;
 
   .modal {
     box-sizing: border-box;
     position: absolute;
-    z-index: @moda-z-index + 1;
+    z-index: @modal-z-index + 1;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -61,7 +61,7 @@
       right: 0;
       bottom: 0;
       background-color: rgba(0, 0, 0, .2);
-      z-index: @moda-z-index;
+      z-index: @modal-z-index;
       content: '';
       width: 100vw;
       height: 100vh;
